--- a/NeuralSimBegin/NeuralSimBegin.vcxproj
+++ b/NeuralSimBegin/NeuralSimBegin.vcxproj
@@ -145,7 +145,11 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cudaStepper.cuh" />
     <ClInclude Include="networkData.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="cudaStepper.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
